# TimeSync

./: .gitignore  CMakeLists.txt  Counter.h  README.md  TimeSync.cpp  TimeSync.h
inc/TimeSync/: Counter.h
src/: TimeSync.cpp
tests/: tests.cpp
